--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-asp-area="" asp-controller="Inquilino" asp-action="Index">Inquilinos</a>
-                        </li>                        
+                        </li>    
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-asp-area="" asp-controller="Inmueble" asp-action="Index">Inmuebles</a>
+                        </li>                     
                     </ul>
                 </div>
             </div>
