--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
                         </li>    
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-asp-area="" asp-controller="Inmueble" asp-action="Index">Inmuebles</a>
-                        </li>                     
+                        </li>       
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-asp-area="" asp-controller="Contrato" asp-action="Index">Contratos</a>
+                        </li>               
                     </ul>
                 </div>
             </div>
