--- a/Views/Inmueble/Editar.cshtml
+++ b/Views/Inmueble/Editar.cshtml
@@ -3,8 +3,13 @@
 @{
     ViewData["Title"] = "Listado de Inmueble";
     int id = Model == null ? 0 : Model.Id;
-    
-    var usos = Enum.GetValues(typeof(inmobiliaria_AT.Models.UsoInmueble)).Cast<inmobiliaria_AT.Models.UsoInmueble>().Select(u => new { Value = u, Text = u.ToString() }).ToList();
+
+    var usos =
+    Enum.GetValues(typeof(inmobiliaria_AT.Models.UsoInmueble)).Cast<inmobiliaria_AT.Models.UsoInmueble>().Select(u => new
+    {
+        Value = u,
+        Text = u.ToString()
+    }).ToList();
 
 }
 
@@ -16,70 +21,73 @@
             <div asp-asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="Id" value="@id">
             <div class="row ">
-            <div class="form-group col-md-6 form-group-spacing">
-                <label asp-for="Uso" class="control-label"></label>
-                <select asp-for="Uso" class="form-control">
-                    @foreach (var uso in usos)
-                    {
-                        <option value = "@uso.Value">
-                            @if (uso.Value == Model.Uso)
-                            {
-                                <text></text>
-                            }
-                            @uso.Text
-                        </option>
-                    }
-                    </select>
-                <span asp-validation-for="Uso" class="text-danger"></span>          
-            </div>
-            <div class="form-group col-md-6 form-group-spacing">
-                <label asp-for="Direccion" class="control-label"></label>
-                <input asp-for="Direccion" class="form-control">
-                <span asp-validation-for="Direccion" class="text-danger"></span>          
-            </div>
-            <div class="form-group col-md-6 form-group-spacing">
-                <label asp-for="Tipo" class="control-label"></label>
-                <input asp-for="Tipo" class="form-control">
-                <span asp-validation-for="Tipo" class="text-danger"></span>          
-            </div>
-            <div class="form-group col-md-6 form-group-spacing">
-                <label asp-for="Ambientes" class="control-label"></label>
-                <input asp-for="Ambientes" class="form-control">
-                <span asp-validation-for="Ambientes" class="text-danger"></span>          
-            </div>
-            <div class="form-group col-md-6 form-group-spacing">
-                <label asp-for="Latitud" class="control-label"></label>
-                 <input asp-for="Latitud" class="form-control"  />
-               <span asp-validation-for="Latitud" class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-6 form-group-spacing">
-                <label asp-for="Longitud" class="control-label"></label>
-                <input asp-for="Longitud" class="form-control" />
-                <span asp-validation-for="Longitud" class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-6 form-group-spacing">
-                <label asp-for="Precio" class="control-label"></label>
-                <input asp-for="Precio" class="form-control">
-                <span asp-validation-for="Precio" class="text-danger"></span>          
-            </div>
-            <div class="row">
                 <div class="form-group col-md-6 form-group-spacing">
-                <input type="submit" value="Guardar" class="btn btn-success"/>
-            </div>
-            </div>
-            
+                    <label asp-for="Uso" class="control-label"></label>
+                    <select asp-for="Uso" class="form-control">
+                        @foreach (var uso in usos)
+                        {
+                            <option value="@uso.Value">
+                                @if (uso.Value == Model.Uso)
+                                {
+                                    <text></text>
+                                }
+                                @uso.Text
+                            </option>
+                        }
+                    </select>
+                    <span asp-validation-for="Uso" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Direccion" class="control-label"></label>
+                    <input asp-for="Direccion" class="form-control">
+                    <span asp-validation-for="Direccion" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label class="control-label">Tipo de inmueble</label>
+                    <select asp-for="TipoId" class="form-control" asp-items="ViewBag.Tipo">
+                        <!-- La opción "Selecciona un tipo de inmueble" se maneja automáticamente -->
+                    </select>
+                    <span asp-validation-for="TipoId" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Ambientes" class="control-label"></label>
+                    <input asp-for="Ambientes" class="form-control">
+                    <span asp-validation-for="Ambientes" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Latitud" class="control-label"></label>
+                    <input asp-for="Latitud" class="form-control" />
+                    <span asp-validation-for="Latitud" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Longitud" class="control-label"></label>
+                    <input asp-for="Longitud" class="form-control" />
+                    <span asp-validation-for="Longitud" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Precio" class="control-label"></label>
+                    <input asp-for="Precio" class="form-control">
+                    <span asp-validation-for="Precio" class="text-danger"></span>
+                </div>
+                <div class="row">
+                    <div class="form-group col-md-6 form-group-spacing">
+                        <input type="submit" value="Guardar" class="btn btn-success" />
+                    </div>
+                </div>
+
         </form>
         <div class="form-group-spacing">
-             <a asp-action="Index" title="Volver">
-             <i class="fa-solid fa-undo"></i>
-             </a>
+            <a asp-action="Index" title="Volver">
+                <i class="fa-solid fa-undo"></i>
+            </a>
         </div>
     </div>
-</div> 
+</div>
 
 @if (TempData["SuccessMessage"] != null)
 {
-    <div class="modal fade" id="modal_success_message" tabindex="-1" aria-labelledby="modalSuccessMessageLabel" aria-hidden="true">
+    <div class="modal fade" id="modal_success_message" tabindex="-1" aria-labelledby="modalSuccessMessageLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
