--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -1,23 +1,23 @@
 @model IEnumerable<inmobiliaria_AT.Models.Inmueble>
 @{
-        ViewData["Title"] = "Lista de Inmuebles";
- }
- <div class="text-center">
+    ViewData["Title"] = "Lista de Inmuebles";
+}
+<div class="text-center">
     <h1 class="display-4">Lista de Inmuebles</h1>
- </div>
- <table class="table">
+</div>
+<table class="table text-center">
     <thead>
         <th>
             Código
-        </th>        
+        </th>
         <th>
-            @Html.DisplayNameFor(model =>model.Uso)
+            @Html.DisplayNameFor(model => model.Uso)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Direccion)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Tipo)
+            Tipo de inmueble
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Precio)
@@ -36,15 +36,15 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Direccion)
                 </td>
-                 <td>
-                    @Html.DisplayFor(modelItem => item.Tipo)
+                <td>
+                    @Html.DisplayFor(modelItem => item.TipoDescripcion)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Precio)
                 </td>
                 <td>
                     <a href="/Inmueble/Editar/@item.Id"></a>
-                    <form action="@Url.Action("Editar", new{id=item.Id})"    method="get" style="display: inline;">
+                    <form action="@Url.Action("Editar", new{id=item.Id})" method="get" style="display: inline;">
                         <button type="submit" class="btn btn-warning btn-custom" title="Editar">
                             <i class="fa-solid fa-pen"></i>
                         </button>
@@ -55,23 +55,26 @@
                             <i class="fa-solid fa-circle-info"></i>
                         </button>
                     </form>
-                     <button type="submit" class="btn btn-danger btn-custom" onclick="eliminar(@item.Id, `@item.Tipo`, `@item.Direccion`, `@item.Precio`)" title="Eliminar">
+                    <button type="submit" class="btn btn-danger btn-custom"
+                        onclick="eliminar(@item.Id, `@item.TipoDescripcion`, `@item.Direccion`, `@item.Precio`)"
+                        title="Eliminar">
                         <i class="fas fa-trash"></i>
                     </button>
                 </td>
             </tr>
-            }
-            <td>
-                <button type="button" class="btn btn-ligth">
-                    <a href="/Inmueble/Editar" title="Agregar Inmueble">
+        }
+        <td>
+            <button type="button" class="btn btn-ligth">
+                <a href="/Inmueble/Editar" title="Agregar Inmueble">
                     <i class="fa-duotone fa-solid fa-plus"></i>
-                    </a>
-                </button>       
+                </a>
+            </button>
         </td>
-    </tbody>      
- </table>
+    </tbody>
+</table>
 
- <div class="modal fade" id="modal_eliminar_inmueble" tabindex="-1" aria-labelledby="modal_eliminar_inmuebleLabel" aria-hidden="true">
+<div class="modal fade" id="modal_eliminar_inmueble" tabindex="-1" aria-labelledby="modal_eliminar_inmuebleLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -81,7 +84,8 @@
             <form method="post" asp-action="Eliminar" id="form_eliminar_inmueble">
                 <div class="modal-body">
                     <input type="hidden" name="Id" value="" id="inmueble_eliminar_id">
-                    <p> <span id="inmueble_eliminar_tipo"></span> <span id="inmueble_eliminar_direccion"></span> <span id="inmueble_eliminar_precio"></span></p>
+                    <p> <span id="inmueble_eliminar_tipoDescripcion"></span> <span
+                            id="inmueble_eliminar_direccion"></span> <span id="inmueble_eliminar_precio"></span></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
@@ -94,7 +98,8 @@
 
 @if (TempData["SuccessMessage"] != null)
 {
-    <div class="modal fade" id="modal_success_message" tabindex="-1" aria-labelledby="modalSuccessMessageLabel" aria-hidden="true">
+    <div class="modal fade" id="modal_success_message" tabindex="-1" aria-labelledby="modalSuccessMessageLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -108,25 +113,25 @@
     </div>
 }
 
- @section Scripts{
+@section Scripts {
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             // Muestro el modal de éxito si existe un mensaje en TempData
             if ($('#modal_success_message').length) {
                 $('#modal_success_message').modal('show');
                 // Oculto el modal después de 3 segundos
-                setTimeout(function() {
+                setTimeout(function () {
                     $('#modal_success_message').modal('hide');
                 }, 3000);
             }
         });
 
-        function eliminar(id, tipo, direccion, precio){//direccion, uso, tipo
-            document.querySelector("#inmueble_eliminar_id").value=id;
-            document.querySelector("#inmueble_eliminar_tipo").innerText=tipo + ", ";
-            document.querySelector("#inmueble_eliminar_direccion").innerText=direccion + ", Precio: ";            
-            document.querySelector("#inmueble_eliminar_precio").innerText= precio;
+        function eliminar(id, tipoDescripcion, direccion, precio) {//direccion, uso, tipo
+            document.querySelector("#inmueble_eliminar_id").value = id;
+            document.querySelector("#inmueble_eliminar_tipoDescripcion").innerText = tipoDescripcion + ", ";
+            document.querySelector("#inmueble_eliminar_direccion").innerText = direccion + ", Precio: ";
+            document.querySelector("#inmueble_eliminar_precio").innerText = precio;
             $("#modal_eliminar_inmueble").modal("show");
         }
     </script>
- }
+}
