--- a/Views/Propietario/Index.cshtml
+++ b/Views/Propietario/Index.cshtml
@@ -1,23 +1,23 @@
 @model IEnumerable<inmobiliaria_AT.Models.Propietario>
 @{
     ViewData["Title"] = "Listado de Propietarios";
- }
- <div class="text-center">
+}
+<div class="text-center">
     <h1 class="display-4">Lista de Propietarios</h1>
- </div>   
+</div>
 
- <table class="table">
-    <thead>        
-            <th>
-                Código
-            </th>
-            <th>
-                @Html.DisplayNameFor(model =>model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Apellido)
-            </th>
-        
+<table class="table text-center">
+    <thead>
+        <th>
+            Código
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Nombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Apellido)
+        </th>
+
     </thead>
     <tbody>
         @foreach (var item in Model)
@@ -34,34 +34,36 @@
                 </td>
                 <td>
                     <a href="/Propietario/Editar/@item.Id"></a>
-                     <form action="@Url.Action("Editar", new{id = item.Id})" method="get" style="display:inline;">
-                        <button type="submit" class="btn btn-warning btn-custom" title="Editar">                           
+                    <form action="@Url.Action("Editar", new{id = item.Id})" method="get" style="display:inline;">
+                        <button type="submit" class="btn btn-warning btn-custom" title="Editar">
                             <i class="fa-solid fa-pen"></i>
                         </button>
                     </form>
                     <a href="/Propietario/Detalle/@item.Id"></a>
-                     <form action="@Url.Action("Detalle", new{id = item.Id})" method="get" style="display:inline;">
+                    <form action="@Url.Action("Detalle", new{id = item.Id})" method="get" style="display:inline;">
                         <button type="submit" class="btn btn-info btn-custom" title="Detalles">
                             <i class="fa-solid fa-circle-info"></i>
                         </button>
                     </form>
-                    <button type="submit" class="btn btn-danger btn-custom" onclick="eliminar(@item.Id, `@item.Nombre`, `@item.Apellido`)" title="Eliminar">
+                    <button type="submit" class="btn btn-danger btn-custom"
+                        onclick="eliminar(@item.Id, `@item.Nombre`, `@item.Apellido`)" title="Eliminar">
                         <i class="fas fa-trash"></i>
                     </button>
                 </td>
-            </tr>           
+            </tr>
         }
-        
-        <td>    
+
+        <td>
             <button type="button" class="btn btn-ligth">
                 <a href="/Propietario/Editar" title="Agregar Propietario">
-                <i class="fa-duotone fa-solid fa-plus"></i>
+                    <i class="fa-duotone fa-solid fa-plus"></i>
                 </a>
-            </button>                           
+            </button>
         </td>
-    </tbody>    
- </table>
-<div class="modal fade" id="modal_eliminar_propietario" tabindex="-1" aria-labelledby="modal_eliminar_propietarioLabel" aria-hidden="true">
+    </tbody>
+</table>
+<div class="modal fade" id="modal_eliminar_propietario" tabindex="-1" aria-labelledby="modal_eliminar_propietarioLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -71,7 +73,8 @@
             <form method="post" asp-action="Eliminar" id="form_eliminar_propietario">
                 <div class="modal-body">
                     <input type="hidden" name="Id" value="" id="propietario_eliminar_id">
-                    <p>Propietario: <span id="propietario_eliminar_nombre"></span> <span id="propietario_eliminar_apellido"></span></p>
+                    <p>Propietario: <span id="propietario_eliminar_nombre"></span> <span
+                            id="propietario_eliminar_apellido"></span></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
@@ -84,7 +87,8 @@
 
 @if (TempData["SuccessMessage"] != null)
 {
-    <div class="modal fade" id="modal_success_message" tabindex="-1" aria-labelledby="modalSuccessMessageLabel" aria-hidden="true">
+    <div class="modal fade" id="modal_success_message" tabindex="-1" aria-labelledby="modalSuccessMessageLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -99,24 +103,24 @@
 }
 
 
- </div>
- @section Scripts{
+</div>
+@section Scripts {
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             // Muestro el modal de éxito si existe un mensaje en TempData
             if ($('#modal_success_message').length) {
                 $('#modal_success_message').modal('show');
                 // Oculto el modal después de 3 segundos
-                setTimeout(function() {
+                setTimeout(function () {
                     $('#modal_success_message').modal('hide');
                 }, 3000);
             }
         });
-        function eliminar(id, nombre, apellido){
-            document.querySelector("#propietario_eliminar_id").value=id;
+        function eliminar(id, nombre, apellido) {
+            document.querySelector("#propietario_eliminar_id").value = id;
             document.querySelector("#propietario_eliminar_nombre").innerText = nombre;
             document.querySelector("#propietario_eliminar_apellido").innerText = apellido;
             $("#modal_eliminar_propietario").modal("show");
         }
     </script>
- }
+}
