--- a/Views/Contrato/Editar.cshtml
+++ b/Views/Contrato/Editar.cshtml
@@ -54,15 +54,17 @@
                     <input asp-for="Estado" class="form-control">
                     <span asp-validation-for="Estado" class="text-danger"></span>
                 </div>
-                <div class="form-group col-md-6 form-group-spacing">
-                    <label asp-for="Tipo" class="control-label"></label>
+                @* <div class="form-group col-md-6 form-group-spacing">
+
+                   <label asp-for="Tipo" class="control-label"></label>
+                    
                     <select asp-for="Tipo" class="form-control">
                         <option value="compraventa">Compraventa</option>
                         <option value="arrendamiento">Arrendamiento</option>
                         <option value="permuta">Permuta</option>
                     </select>
                     <span asp-validation-for="Tipo" class="text-danger"></span>
-                </div>
+                </div>*@
             </div>
             <div class="row">
                 <div class="form-group col-md-6 form-group-spacing">
