--- a/Views/Inquilino/Index.cshtml
+++ b/Views/Inquilino/Index.cshtml
@@ -70,7 +70,7 @@
             <form method="post" asp-action="Eliminar" id="form_eliminar_inquilino">
                 <div class="modal-body">
                     <input type="hidden" name="Id" value="" id="inquilino_eliminar_id">
-                    <p>Propietario: <span id="inquilino_eliminar_nombre"></span> <span
+                    <p>Inquilino: <span id="inquilino_eliminar_nombre"></span> <span
                             id="inquilino_eliminar_apellido"></span></p>
                 </div>
                 <div class="modal-footer">
