--- a/Views/Inmueble/Editar.cshtml
+++ b/Views/Inmueble/Editar.cshtml
@@ -65,9 +65,22 @@
                     <span asp-validation-for="Longitud" class="text-danger"></span>
                 </div>
                 <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Superficie" class="control-label"></label>
+                    <input asp-for="Superficie" class="form-control" />
+                    <span asp-validation-for="Superficie" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6 form-group-spacing">
                     <label asp-for="Precio" class="control-label"></label>
                     <input asp-for="Precio" class="form-control">
                     <span asp-validation-for="Precio" class="text-danger"></span>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-md-6 form-group-spacing">
+                        <label class="control-label">Propietario</label>
+                        <select asp-for="IdPropietario" class="form-control" asp-items="ViewBag.Propietario"></select>
+                        <span asp-validation-for="IdPropietario" class="text-danger"></span>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-md-6 form-group-spacing">
@@ -76,10 +89,12 @@
                 </div>
 
         </form>
-        <div class="form-group-spacing">
-            <a asp-action="Index" title="Volver">
-                <i class="fa-solid fa-undo"></i>
-            </a>
+        <div class="volver">
+            <div class="form-group-spacing">
+                <a asp-action="Index" title="Volver">
+                    <i class="fa-solid fa-undo"></i>
+                </a>
+            </div>
         </div>
     </div>
 </div>
