--- a/Views/Contrato/index.cshtml
+++ b/Views/Contrato/index.cshtml
@@ -8,25 +8,25 @@
 </div>
 <table class="table">
     <thead>
-        <th>Id del Contrato</th>
-       
+        <th>Código</th>
+
         <th>
-            @Html.DisplayNameFor(model => model.FechaInicio)
+            Dirección
 
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FechaFin)
+            Propietario
 
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Monto)
 
         </th>
-        @*
+
         <th>
             @Html.DisplayNameFor(model => model.Tipo)
 
-        </th>*@
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Plazo)
 
@@ -42,22 +42,20 @@
 
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.FechaInicio)
-
+                    @(item.Inmu.Direccion)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.FechaFin)
-
+                    @(item.Prop.NombreCompleto)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Monto)
-                    
+                    $ @Html.DisplayFor(modelItem => item.Monto)
+
                 </td>
 
-                @*<td>
+                <td>
                     @Html.DisplayFor(modelItem => item.Tipo)
 
-                </td>*@
+                </td>
 
                 <td>
                     @Html.DisplayFor(modelItem => item.Plazo)
@@ -75,7 +73,7 @@
                         <button type="submit" class="btn btn-info btn-custom" title="Detalles">
                             <i class="fa-solid fa-circle-info"></i>
                         </button>
-                    </form> @*                                               AGREGAR @item.Tipo                        *@
+                    </form> @* AGREGAR @item.Tipo *@
                     <button type="submit" class="btn btn-danger btn-custom"
                         onclick="eliminar(@item.Id, `@item.FechaInicio`, `@item.FechaFin`, `@item.Monto`, `@item.Plazo`)"
                         title="Eliminar">
@@ -92,7 +90,7 @@
             </button>
             </tr>
 
-            
+
 
 
     </tbody>
