--- a/Views/Inmueble/Editar.cshtml
+++ b/Views/Inmueble/Editar.cshtml
@@ -3,14 +3,6 @@
 @{
     ViewData["Title"] = "Listado de Inmueble";
     int id = Model == null ? 0 : Model.Id;
-
-    var usos =
-    Enum.GetValues(typeof(inmobiliaria_AT.Models.UsoInmueble)).Cast<inmobiliaria_AT.Models.UsoInmueble>().Select(u => new
-    {
-        Value = u,
-        Text = u.ToString()
-    }).ToList();
-
 }
 
 <h4>Inmueble</h4>
@@ -23,18 +15,7 @@
             <div class="row ">
                 <div class="form-group col-md-6 form-group-spacing">
                     <label asp-for="Uso" class="control-label"></label>
-                    <select asp-for="Uso" class="form-control">
-                        @foreach (var uso in usos)
-                        {
-                            <option value="@uso.Value">
-                                @if (uso.Value == Model.Uso)
-                                {
-                                    <text></text>
-                                }
-                                @uso.Text
-                            </option>
-                        }
-                    </select>
+                    <select asp-for="Uso" class="form-control" asp-items="ViewBag.Usos"></select>
                     <span asp-validation-for="Uso" class="text-danger"></span>
                 </div>
                 <div class="form-group col-md-6 form-group-spacing">
@@ -75,13 +56,39 @@
                     <span asp-validation-for="Precio" class="text-danger"></span>
                 </div>
 
+                @* <div class="row">
+                <div class="form-group col-md-6 form-group-spacing">
+                <label class="control-label">Propietario</label>
+                <select asp-for="IdPropietario" class="form-control" asp-items="ViewBag.Propietario"></select>
+                <span asp-validation-for="IdPropietario" class="text-danger"></span>
+                </div>
+                </div> *@
+
                 <div class="row">
                     <div class="form-group col-md-6 form-group-spacing">
                         <label class="control-label">Propietario</label>
-                        <select asp-for="IdPropietario" class="form-control" asp-items="ViewBag.Propietario"></select>
+                        <select asp-for="IdPropietario" class="form-control" asp-items="ViewBag.Propietario"
+                            id="propietarioSelect">
+                        </select>
                         <span asp-validation-for="IdPropietario" class="text-danger"></span>
                     </div>
                 </div>
+
+                @* <div class="form-group col-md-6 form-group-spacing">
+                <label class="control-label">Propietario</label>
+                <!-- Input con datalist -->
+                <input type="text" asp-for="IdPropietario" class="form-control" list="propietarios"
+                id="inputPropietario" placeholder="Escriba el nombre del propietario"
+                value="@ViewBag.SelectedPropietario" />
+                <datalist id="propietarios">
+                @foreach (var propietario in ViewBag.Propietarios as List<Propietario>)
+                {
+                <option value="@propietario.NombreCompleto" data-id="@propietario.Id" />
+                }
+                </datalist>
+                <span asp-validation-for="IdPropietario" class="text-danger"></span>
+                </div> *@
+
                 <div class="row">
                     <div class="form-group col-md-6 form-group-spacing">
                         <input type="submit" value="Guardar" class="btn btn-success" />
@@ -114,4 +121,15 @@
             </div>
         </div>
     </div>
+}
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#propietarioSelect').select2({
+                placeholder: "Seleccione un propietario",
+                allowClear: true,
+                width: 'resolve'
+            });
+        });
+    </script>
 }
